--- a/check2.css
+++ b/check2.css
@@ -4,4 +4,68 @@ h2{
     width: 9rem;
     text-align: center;
     padding-bottom: 0.3rem;
+    margin-left: 15%;
+}
+#box{
+    padding-left: 20%;
+    padding-top: 1%;
+    display: inline-flex;
+    
+}
+
+#grid_table{
+    background-color: rgb(221, 218, 218);
+    width: 40rem;
+    height: 300px;
+    display: grid;
+    grid-template-columns: repeat(2, 300px);
+    font-size: 130%;
+    text-align: center;
+    padding-top: 2%;
+    
+}
+
+#name{
+    width: 50%;
+    padding-left: 27%;
+    padding-top: 2%;
+    font-size: 150%;
+}
+
+#line{
+    display: inline-flex;
+    width: 50rem;
+    justify-content: space-around;
+    padding-left: 38%;
+    padding-top: 3%;
+
+}
+#ok{
+    background-color: red;
+    color: white;
+    width: 10rem;
+    height: 2.5rem;
+    font-size: 2rem;
+    text-align: center;
+    border-radius: 10px;
+}
+
+#re{
+    background-color:rgb(57, 168, 57);
+    color: white;
+    width: 10rem;
+    height: 2.5rem;
+    font-size: 2rem;
+    text-align: center;
+    border-radius: 10px;
+}
+
+#dis{
+    background-color:grey;
+    color: white;
+    width: 10rem;
+    height: 2.5rem;
+    font-size: 2rem;
+    text-align: center;
+    border-radius: 10px;
 }
