--- a/check1.css
+++ b/check1.css
@@ -8,7 +8,7 @@ h2{
 #search{
     text-align: right; 
     margin-right: 3%;
-    width: 100px;
+    width: 300px;
 }
 textarea{
     width: 60%;
@@ -20,22 +20,26 @@ textarea{
     width: 100%;
     display: flex;
     justify-content: center;
+    padding-top: 50px;
 }
 #grid_table{        /*grid 나누기 위한 div */
     width: 1000px;
-    height: 200px;
+    height: 180px;
     display: grid;
-    border: 1px solid black;
-    grid-template-columns: repeat(5, 200px);    /*열로 각 div를 200px 5번으로 나누겠다 */
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    grid-template-columns: repeat(5, 200px);      /*열로 각 div를 200px 5번으로 나누겠다 */
 }
 #grid_table > div{
-    border: 1px solid black;
+    border-bottom: 1px solid black;
+    text-align: center;
+    margin-top: 20px;
 }
 
 #number{
-    text-align: center;
     display: flex;
     justify-content: space-around;
     width: 30%;
-    margin-left: 27%;
+    margin-left: 35%;
+    padding-top: 200px;
 }
